# notes

./: .gitignore  README.md
dart/: README.md  functions.dart  string_interpolation.dart
dart/base/: class.dart  functions.dart  hello_world.dart  library_usage.dart  my_library.dart  my_library_print_hello.dart  my_library_print_world.dart  optional_types.dart  part.dart
dart/loglib/: classes.dart  functions.dart  loglib.dart
dart/pack_list/: pack_list.dart
dart/web/: button.dart  canvas.dart
dart/web/base/: button.dart  canvas.dart
dart/web/base/index/: index.html
dart/web/index/: index.html
dart/web/pack_list/: pack_list.dart
dart/web/pack_list/index/: pack_list.html
ml/: README.md
ml/jupyter/: Classification.ipynb  Regression.ipynb
ml/jupyter/.ipynb_checkpoints/: Classification-checkpoint.ipynb
oop/: README.md
oop/patterns/: CMakeLists.txt  README.md  decorator.cpp  factory-method.cpp  factory.cpp  observer.cpp  singleton.cpp  strategy.cpp
